cmake_minimum_required(VERSION 4.1)
project(EjerciciosUML)

set(CMAKE_CXX_STANDARD 20)

add_executable(EjerciciosUML main.cpp
        Estudiante.cpp
        Estudiante.h
        Profesor.cpp
        Profesor.h
        Libro.cpp
        Libro.h
        Biblioteca.cpp
        Biblioteca.h
        Habitacion.cpp
        Habitacion.h
        Casa.cpp
        Casa.h
        Operacion.cpp
        Operacion.h
        Calculadora.cpp
        Calculadora.h
        Rueda.cpp
        Rueda.h
        Automovil.cpp
        Automovil.h
        Receta.cpp
        Receta.h
        Cocinero.cpp
        Cocinero.h
        ObraArte.cpp
        ObraArte.h
        Museo.cpp
        Museo.h
        IDE.cpp
        IDE.h
        Programador.cpp
        Programador.h)
